# LLM-Training

./: .agent_instructions.md  .gitignore  00_Playground.ipynb  00_Playground.py  GPTQ_IMPLEMENTATION_SUMMARY.md  PROJECT_STRUCTURE.md  QUANTIZATION_EXPERIMENTS.md  QUICKSTART.md  README.md  RESEARCH_ROADMAP.md  ROADMAP_SUMMARY.md  SMOOTHQUANT_IMPLEMENTATION_SUMMARY.md  create_1.5b_base.py  debug_model_responses.py  pyproject.toml  qlora_commands.bat  qlora_implementation_commands.ps1  qlora_implementation_commands.py  quantization_utils.py  quick_test_model.py  run_quantization_experiments.py  test_qlora_config.py  test_qlora_training_logic.py  train_quantization_variants.py  validate_qlora.py
.github/: copilot-instructions.md
DataPreparation/: 1_PreprocessData.ipynb  2_ReduceTestData.ipynb  3_ReduceTrainData.ipynb
Datasets/: calibration_openmath_100samples.txt  calibration_openmath_10samples.txt  calibration_openmath_512samples.txt  calibration_openmath_5samples.txt  calibration_prompts.txt  test-OpenMathInstruct-2.parquet  test-ai2_arc.parquet  test-boolq.parquet  test-squad_v2.parquet  train-OpenMathInstruct-2.parquet  train-ai2_arc.parquet  train-boolq.parquet  train-squad_v2.parquet
Documentation/: 01_Finetuning_ModelSize_LoraR.md  01_Finetuning_ModelSize_LoraR.tex  02_Adapters-Lora_Vera_Dora.tex  02_ParameterEfficientFineTuning.tex  03_SFT-Quantization-Adapters.tex  AWQ_Method.md  AdaRound_Method.md  BRECQ_Method.md  GPTQ_Method.md  HQQ_Method.md  NoQuant_Method.md  QLoRA_Implementation.md  QLoRA_Method.md  QuaRot_Method.md  QuantizationMethodsStatus.md  (+1 more)
(+251 files in other folders)
