[project]
name = "llm-training"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.10.0",
    "bitsandbytes>=0.47.0",
    "device-smi>=0.4.1",
    "ipykernel>=6.30.1",
    "pandas>=2.3.1",
    "peft>=0.17.1",
    "pillow>=11.3.0",
    "pyarrow>=21.0.0",
    "statistics>=1.0.3.5",
    "torch>=2.8.0",
    "tqdm>=4.67.1",
    "transformers>=4.55.1",
    "trl>=0.21.0",
]
